--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1"
   },
-  "proxy" : "https://od-api.oxforddictionaries.com:443/api/v2",
+  "proxy": "https://od-api.oxforddictionaries.com:443/api/v2",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
